refactor: divide publisher and title query parameter, improve code lisibility, add seed data and bash script test for GET books (#83)
* fix: align GetBook tests with empty null data

* chore: add seed script for GET /books

* chore: add bash test script for GET /books

* refact: split search into title+publisher filters with per-field validation

* fix: align GET /books test script with live DB data and curlie GET verb

* chore: apply code formatting
