# src/main/java/hei/school/library/endpoint/rest/controller/BookController.java
@@ -25,14 +25,16 @@ public class BookController {
 
   @GetMapping
   public ResponseEntity<PageResponse<BookResponse>> searchBooks(
-      @RequestParam(required = false) String search,
+      @RequestParam(required = false) String title,
+      @RequestParam(required = false) String publisher,
       @RequestParam(required = false) String isbn,
       @RequestParam(required = false) String lastName,
-      @RequestParam(required = false) String genreName,
+      @RequestParam(required = false) String genre,
       @RequestParam(defaultValue = "1") int page,
       @RequestParam(defaultValue = "20") int size) {
 
-    return ResponseEntity.ok(bookService.listBooks(search, isbn, lastName, genreName, page, size));
+    return ResponseEntity.status(HttpStatus.OK)
+        .body(bookService.listBooks(title, publisher, isbn, lastName, genre, page, size));
   }
 
   @GetMapping("/{id}")
